# open-auth2-rs

./: Cargo.toml  README.md
src/: client.rs  layer.rs  lib.rs  scope.rs  server.rs  util.rs
src/client/: mod.rs
src/endpoints/: authorization.rs  mod.rs  pushed_authorization.rs  token.rs
src/ext/: mod.rs  pkce.rs  rar.rs
src/grant/: authorization_code.rs  mod.rs  pre_authorized_code.rs  refresh.rs
src/http/: mod.rs
src/http/client/: reqwest.rs
src/server/: axum.rs  metadata.rs  mod.rs
src/transport/: mod.rs
src/transport/client/: mod.rs  reqwest.rs
src/types/: access_token.rs  client_id.rs  code.rs  mod.rs  scope.rs  state.rs
src/util/: discoverable.rs  mod.rs
