[package]
name = "open-auth2"
authors = ["Spruce Systems, Inc."]
description = "Modular library for the OAuth 2.0 Authorization Framework"
keywords = ["oauth2", "authentication", "authorization", "security", "rust"]
categories = ["authentication", "web-programming", "network-programming"]
license = "Apache-2.0 OR MIT"
edition = "2024"
version = "0.1.0"

[features]
reqwest = ["dep:reqwest"]
axum = ["dep:axum"]

[dependencies]
base64 = "0.22.1"
iref = { version = "3.2.2", features = ["serde", "macros"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_html_form = "0.4.0"
sha2 = "0.10.9"
str-newtype = "2.0.0"
thiserror = "2.0.18"
http = "1.4.0"
serde_json = "1.0.149"
serde_with = "3.16.1"

reqwest = { version = "0.13.2", optional = true }
axum = { version = "0.8.8", optional = true }
log = "0.4.29"
